# CoreQueue

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md
apps/api/: alembic.ini  main.py  pyproject.toml
apps/api/clients/: redis_client.py
apps/api/core/: config.py  db.py  paths.py
apps/api/migrations/: env.py  script.py.mako
apps/api/migrations/versions/: 0001_create_jobs.py  0002_core_entities.py  0003_policies.py
apps/api/models/: __init__.py  base.py  job.py  metric.py  policy.py  runner.py  team.py  user.py
apps/api/routers/: health.py  jobs.py  metrics.py  policies.py  runners.py
apps/api/schemas/: job.py  policy.py
apps/api/services/: job_service.py  policy_service.py
apps/api/storage/: artifacts.py  base.py  logs.py
apps/runner/: Package.swift
apps/runner/Sources/Runner/: main.swift
apps/web/: next.config.js  package-lock.json  package.json
apps/web/src/api/: jobs.ts  metrics.ts  policies.ts  runners.ts
apps/web/src/components/Card/: Card.module.css  Card.tsx
apps/web/src/components/Common/: ErrorMessage.module.css  ErrorMessage.tsx  Loading.module.css  Loading.tsx
apps/web/src/pages/: _app.tsx  home.module.css  index.tsx
apps/web/src/schemas/: job.ts  metrics.ts  policy.ts  runner.ts
apps/web/src/styles/: globals.css
apps/web/src/trpc/: router.ts
apps/worker/: main.py  pyproject.toml
deploy/docker/: api.Dockerfile  docker-compose.dev.yml  docker-compose.yml  web.Dockerfile  worker.Dockerfile
infra/nginx/: nginx.local.conf
scripts/: dev_bootstrap.sh
(+23 files in other folders)
