[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.120.0",
    "uvicorn[standard]>=0.30.0",
    "SQLAlchemy>=2.0.0",
    "psycopg[binary]>=3.2.0",
    "alembic>=1.13.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "orjson>=3.10.0",
    "redis>=5.0.0",
    "pyyaml>=6.0.0",
    "python-multipart>=0.0.20",
]

[tool.alembic]
script_location = "migrations"

